# aws-account-audit

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
aws_account_audit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
aws_audit/: aws.py  cli.py  config.py  models.py  utils.py
aws_audit/checks/: __init__.py  cloudfront.py  ec2.py  iam.py  s3.py  tagging.py
aws_audit/reporting/: emit.py
aws_audit/reporting/templates/: report.html.j2  report.md.j2
tests/: test_checks.py  test_config.py  test_reporting.py
